was testing on mobile, and the sizing was bad, so attempting to fix here

--- a/src/index.css
+++ b/src/index.css
@@ -188,4 +188,40 @@ header {
   filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5));
 }
 
+/* Mobile responsiveness */
+
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 16px;
+  }
+
+  header img {
+    height: 8rem;
+    width: 8rem;
+  }
+
+  header h1 {
+    font-size: 3rem;
+  }
+
+  header p {
+    font-size: 1rem; 
+  }
+
+  header ul {
+    flex-direction: column; 
+    align-items: center;
+  }
+
+  #main-projects li {
+    width: 100%; 
+    margin-bottom: 1rem;
+  }
+
+  #main-projects li img {
+    height: 3rem; 
+    width: auto;
+  }
+}
+
   
